manifests/seraphim/prod/gitlab/HTTPRoute-gitlab-kas.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations: {}
  labels:
    app: kas
    chart: kas-9.8.2
    heritage: Helm
    release: gitlab
  name: gitlab-kas
  namespace: gitlab
spec:
  hostnames:
    - kas.example.com
  parentRefs:
    - name: gitlab-gw
      sectionName: kas-web
  rules:
    - backendRefs:
        - kind: Service
          name: gitlab-kas
          port: 8154
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /k8s-proxy
